# Ramzess

./: .gitignore  README.md
demo/: clean.sh  run.sh
demo/HelloWorld/: CMakeLists.txt
demo/hello-world-1/: CMakeLists.txt  README.md
demo/hello-world-1/src/main/: source.cpp
demo/hello-world-2/: CMakeLists.txt
demo/hello-world-2/src/main/: source.cpp
demo/hello-world-3/: .gitignore  CMakeLists.txt  README.md
demo/hello-world-3/src/main/: source.cpp
